Bug 166436 - Crash in: tools::SvRef<writerfilter::dmapper::FieldContext>::SvRef<writerfilter::dmapper::FieldContext>(tools::SvRef<writerfilter::dmapper::FieldContext> const &)
Summary: Crash in: tools::SvRef<writerfilter::dmapper::FieldContext>::SvRef<writerfilt...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3 all versions
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-05-02 13:35 UTC by vkbellis@gmail.com
Modified: 2025-05-05 09:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["tools::SvRef<writerfilter::dmapper::FieldContext>::SvRef<writerfilter::dmapper::FieldContext>(tools::SvRef<writerfilter::dmapper::FieldContext> const &)"]


Attachments
sample file (44.40 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-05-02 13:59 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vkbellis@gmail.com 2025-05-02 13:35:24 UTC
This bug was filed from the crash reporting server and is br-49820692-18c3-4699-95ee-50b22cfa5426.
=========================================

Bug Report related to LibreOffice Writer Crashing
Bug Summary: Writer crashes when opening .docx created by RootsMagic

Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Bug Description: RootsMagic is a popular genealogical software program which allows its users to create a wide array of reports and then optionally write to different formats including .docx. The problem presents itself when LibreOffice attempts to open the .docx file created by RootsMagic. No other word processing programs are known to crash when opening a .docx file produced by RootsMagic, only LibreOffice. Much more detail is discussed in this thread: https://community.rootsmagic.com/t/rm10-publish-narrative-save-docx-why-is-libreoffice-crashing/13705

A few of the crash reports I've sent
https://crashreport.libreoffice.org/stats/crash_details/e94e539e-1d04-4b47-b23e-b5a2a8cfdd54
https://crashreport.libreoffice.org/stats/crash_details/cf1bc6ab-c3bc-47d7-bb74-e5b8c5fbc1dc
https://crashreport.libreoffice.org/stats/crash_details/49820692-18c3-4699-95ee-50b22cfa5426
Comment 1 Xisco Faulí 2025-05-02 13:59:30 UTC
Created attachment 200631 [details]
sample file
Comment 2 Xisco Faulí 2025-05-02 14:00:37 UTC
Reproduced in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 32c7035824e50429c4ffeb43d0bdf306ba8874e9
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2025-05-02 14:06:32 UTC
Regression introduced by:

commit 05f92eb1359c399c43d3bcbe8942034408fa23eb	[log]
author	László Németh <nemeth@numbertext.org>	Fri Oct 01 17:42:48 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Mon Oct 04 08:22:23 2021 +0200
tree 84e4c5fcdd8f8fd84f25160db52b17dd64e0a50f
parent f8e086f185b31f753074fd22ecc73c44b193a784 [diff]

tdf#77051 DOCX: fix user index and index entry support

Bisected with: linux-64-7.3
Comment 4 Commit Notification 2025-05-02 18:20:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d72156ff0831c7ce240bb1fe1b542db5c54d1f37

tdf#166436: check field stack is not empty

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 vkbellis@gmail.com 2025-05-03 11:53:47 UTC
Thank you Xisco!
Comment 6 Commit Notification 2025-05-05 09:48:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/eb87f4315e0e67d094df479b3619e53346b0ff92

tdf#166436: check field stack is not empty

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.