tdf#166436: check field stack is not empty

like other places do

Change-Id: I6fcb2bd849b11b0f17f1b19193a24c8e1f4ee660
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184909
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>