sw/source/writerfilter/dmapper/DomainMapper.cxx
@@ -2741,7 +2741,7 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, const PropertyMapPtr& rContext )
                 }
             }
 
-            else if ( pSectionContext )
+            else if ( pSectionContext && m_pImpl->IsOpenField())
             {
                 FieldContextPtr pContext = m_pImpl->GetTopFieldContext();
                 rtl::Reference< SwXSection > xTOC = pContext->GetTOC();
